--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#000000"
     },
     "ios": {
@@ -22,6 +22,12 @@
         "backgroundColor": "#000000"
       },
       "package": "com.sigmaalpha.Manhunt"
+    },
+    "androidNavigationBar": {
+      "visible": "sticky-immersive"
+    },
+    "androidStatusBar": {
+      "visible": "sticky-immersive"
     },
     "web": {
       "bundler": "metro",
